--- a/examples/7guis/3-flight/index.html
+++ b/examples/7guis/3-flight/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <body>
-    <div id="container"></div>
   </body>
   <script src="../../../_build/default/examples/7guis/3-flight/index.bc.js"></script>
 </html>
