--- a/playground/index.html
+++ b/playground/index.html
@@ -1,48 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <style>
       body {
         margin: 0;
+        display: flex;
+        flex-direction: column;;
+        height: 100vh;
       }
       .row {
         display: flex;
-      }
-      .column {
-        display: flex;
-        flex-direction: column;
-        width: 50vw;
-        max-width: 50vw;
-        height: 100vh;
-        max-height: 100vh;
+        flex: 1;
       }
       .cm-scroller {
         overflow: auto;
       }
       #editor {
         overflow: hidden;
-        flex: 1;
+        height: 100%;
+      }
+      iframe {
+        height: 100%;
+        width: 100%;
+        border: 0px;
       }
       .cm-editor {
         width: 100%;
-        max-width: 100%;
         height: 100%;
-        max-height: 100%;
       }
     </style>
   </head>
   <body>
+    <div id="header">
+      <select id="examples">
+      </select>
+    </div>
     <div class="row">
-      <div class="column">
-        <div>
-          <button id="run">Run</button>
-          <select id="examples">
-          </select>
-        </div>
+      <div id="left">
         <div id="editor"></div>
+        <div id="footer">
+          <button id="run">Run</button>
+        </div>
       </div>
-      <div class="column" id="container"></div>
+      <div id="right">
+      </div>
     </div>
     <script src="editor.js"></script>
     <script src="index.js"></script>
