--- a/playground/index.html
+++ b/playground/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="vendor/codemirror.css" rel="stylesheet" />
+    <link href="vendor/zenburn.css" rel="stylesheet" />
     <style>
       body {
         margin: 0;
@@ -31,7 +33,7 @@
         width: 100%;
         border: 0px;
       }
-      .cm-editor {
+      .CodeMirror {
         width: 100%;
         height: 100%;
       }
@@ -52,7 +54,26 @@
       <div id="right">
       </div>
     </div>
-    <script src="editor.js"></script>
+    <script src="vendor/split.min.js"></script>
+    <script src="vendor/codemirror.js"></script>
+    <script src="vendor/mllike.js"></script>
+    <!-- <script src="vendor/simplescrollbars.js"></script> -->
+    <script src="vendor/active-line.js"></script>
+    <script>
+      Split(['#left', '#right'], {
+        sizes: [50, 50],
+        cursor: 'ew-resize'
+      });
+    </script>
+    <script>
+      window.editor = CodeMirror(document.getElementById('editor'),{
+        mode: 'mllike',
+        lineNumbers: true,
+        lineWrapping: true,
+        styleActiveLine: true,
+        // scrollbarStyle: 'simple'
+      });
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
