--- a/playground/index.html
+++ b/playground/index.html
@@ -44,15 +44,13 @@
   </head>
   <body>
     <div id="header">
-      <select id="examples">
-      </select>
+      <select id="examples"></select>
+      <button id="run">Run</button>
+      <button id="help">Show Help</button>
     </div>
     <div class="row">
       <div id="left">
         <div id="editor"></div>
-        <div id="footer">
-          <button id="run">Run</button>
-        </div>
       </div>
       <div id="right">
       </div>
